--- a/history.html
+++ b/history.html
@@ -15,6 +15,7 @@
             rel="canonical"
             href="https://getbootstrap.com/docs/5.3/examples/grid/"
         />
+        <link href="../assets/dist/css/bootstrap.min.css" rel="stylesheet" />
 
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -48,14 +49,16 @@
                     <li class="nav-item">
                         <a
                             href="homepage.html"
-                            class="nav-link active"
+                            class="nav-link"
                             aria-current="page"
                             >Home</a
                         >
                     </li>
 
                     <li class="nav-item">
-                        <a href="history.html" class="nav-link">History</a>
+                        <a href="history.html" class="nav-link active"
+                            >History</a
+                        >
                     </li>
                 </ul>
             </header>
@@ -98,128 +101,50 @@
                     </path>
                 </svg>
             </div>
-            <section class="py-5 text-center container bkg-helper">
-                <div class="row py-lg-5">
-                    <div class="col-lg-6 col-md-8 mx-auto">
-                        <h1 class="fw-light">
-                            We Give You the Options, You Vote On the Movies!
-                        </h1>
-                        <p class="lead text-body-secondary">
-                            Choosing a movie for movie night can be hard, but we
-                            got you covered! Select the number of participants
-                            and click "Generate Movies" to get started!
-                        </p>
-                    </div>
-                </div>
-            </section>
-            <!-- Section -->
             <div class="album py-5 bg-body-tertiary">
                 <div class="container">
-                    <div
-                        id="buttonHolder"
-                        class="btn-group"
-                        role="group"
-                        aria-label="Button group with nested dropdown"
-                    >
-                        <button
-                            type="button"
-                            class="btn btn-primary generatebtn"
-                        >
-                            Generate Movies
-                        </button>
-                        <div class="btn-group" role="group">
-                            <button
-                                id="myButton"
-                                type="button"
-                                class="btn btn-primary dropdown-toggle dropbtn"
-                                data-bs-toggle="dropdown"
-                                aria-expanded="false"
-                            >
-                                Participants
-                            </button>
-                            <div id="dropDownMenu" class="dropdown-content">
-                                <a
-                                    class="dropdown-item"
-                                    href="#"
-                                    onclick="showButtons(1)"
-                                    >1</a
-                                >
+                    <h1>We Give You the Options, Here's all your results!</h1>
+                    <p class="lead">
+                        Stay up-to-date with your personalized movie
+                        recommendations!
+                    </p>
+                    <p>
+                        Our Watchlist History page allows you to keep track of
+                        all the movies you've added to your watchlist, making it
+                        easy to plan your movie nights and never miss out on a
+                        great film again.
+                    </p>
 
-                                <a
-                                    class="dropdown-item"
-                                    href="#"
-                                    onclick="showButtons(2)"
-                                    >2</a
-                                >
+                    <h2 class="mt-4">Take another look</h2>
+                    <p>
+                        Whether you're creating a list for a cozy movie night at
+                        home or building your must-watch collection, our
+                        Watchlist History page ensures that you never forget the
+                        movies that piqued your interest and guarantees an
+                        enjoyable movie-watching experience.
+                    </p>
 
-                                <a
-                                    class="dropdown-item"
-                                    href="#"
-                                    onclick="showButtons(3)"
-                                    >3</a
-                                >
-
-                                <a
-                                    class="dropdown-item"
-                                    href="#"
-                                    onclick="showButtons(4)"
-                                    >4</a
-                                >
-
-                                <a
-                                    class="dropdown-item"
-                                    href="#"
-                                    onclick="showButtons(5)"
-                                    >5</a
-                                >
-
-                                <a
-                                    class="dropdown-item"
-                                    href="#"
-                                    onclick="showButtons(6)"
-                                    >6</a
-                                >
-
-                                <a
-                                    class="dropdown-item"
-                                    href="#"
-                                    onclick="showButtons(7)"
-                                    >7</a
-                                >
-
-                                <a
-                                    class="dropdown-item"
-                                    href="#"
-                                    onclick="showButtons(8)"
-                                    >8</a
-                                >
-
-                                <a
-                                    class="dropdown-item"
-                                    href="#"
-                                    onclick="showButtons(9)"
-                                    >9</a
-                                >
-
-                                <a
-                                    class="dropdown-item"
-                                    href="#"
-                                    onclick="showButtons(10)"
-                                    >10</a
-                                >
-                            </div>
-                        </div>
+                    <div class="row text-center">
+                        <div class="col-4 themed-grid-col">Date</div>
+                        <div class="col-4 themed-grid-col">Movie Name</div>
+                        <div class="col-4 themed-grid-col">Link</div>
                     </div>
 
-                    <div class="userSet"></div>
-                    <hr />
-                    <div
-                        class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3"
-                        id="movieListContainer"
-                    ></div>
+                    <div class="row text-center">
+                        <div class="col-4 themed-grid-col">Date</div>
+                        <div class="col-4 themed-grid-col">Movie Name</div>
+                        <div class="col-4 themed-grid-col">Link</div>
+                    </div>
+
+                    <div class="row text-center">
+                        <div class="col-4 themed-grid-col">Date</div>
+                        <div class="col-4 themed-grid-col">Movie Name</div>
+                        <div class="col-4 themed-grid-col">Link</div>
+                    </div>
                 </div>
             </div>
         </main>
+
         <!-- Footer -->
         <footer class="text-body-secondary py-5">
             <div class="container">
@@ -236,7 +161,7 @@
                 </p>
             </div>
         </footer>
-
+        <script src="../assets/dist/js/bootstrap.bundle.min.js"></script>
         <script src="homepage.js"></script>
     </body>
 </html>
