--- a/favorites.html
+++ b/favorites.html
@@ -1,17 +1,141 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Favorite Movies</title>
-  <link rel="stylesheet" type="text/css" href="./style.css" /> 
-</head>
-<body>
-  <!-- Favorites page -->
-  <div class="favoritesPage">
-    <h1>Your Favorite Movies</h1>
-    <div class="favoriteMoviesList"></div>
-  </div>
-  <script src="favorites.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="" />
+        <title>Favorite Movies</title>
+        <link rel="stylesheet" type="text/css" href="./style.css" />
+
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+            crossorigin="anonymous"
+        />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+            crossorigin="anonymous"
+        ></script>
+    </head>
+    <body>
+        <!-- Header -->
+        <div class="container">
+            <header
+                class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
+            >
+                <a
+                    href="/"
+                    class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none"
+                >
+                    <svg class="bi me-2" width="40" height="32">
+                        <use xlink:href="#bootstrap" />
+                    </svg>
+                    <span class="fs-4">MOVFI</span>
+                </a>
+
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <a
+                            href="index.html"
+                            class="nav-link"
+                            aria-current="page"
+                            >Home</a
+                        >
+                    </li>
+
+                    <li class="nav-item">
+                        <a href="favorites.html" class="nav-link active"
+                            >Favorites</a
+                        >
+                    </li>
+                </ul>
+            </header>
+        </div>
+        <!-- Blob and Hero -->
+        <main>
+            <div class="blob-crt">
+                <svg
+                    version="1.1"
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 500 500"
+                    width="50%"
+                    id="blobSvg"
+                >
+                    <defs>
+                        <lineargradient
+                            id="gradient"
+                            x1="0%"
+                            y1="0%"
+                            x2="0%"
+                            y2="100%"
+                        >
+                            <stop
+                                offset="0%"
+                                style="stop-color: rgb(147, 11, 11)"
+                            ></stop>
+                            <stop
+                                offset="100%"
+                                style="stop-color: rgb(203, 87, 87)"
+                            ></stop>
+                        </lineargradient>
+                    </defs>
+                    <path id="blob" fill="url(#gradient)">
+                        <animate
+                            attributeName="d"
+                            dur="7800ms"
+                            repeatCount="indefinite"
+                            values="M440.5,320.5Q418,391,355.5,442.5Q293,494,226,450.5Q159,407,99,367Q39,327,31.5,247.5Q24,168,89,125.5Q154,83,219.5,68Q285,53,335.5,94.5Q386,136,424.5,193Q463,250,440.5,320.5Z;M453.78747,319.98894Q416.97789,389.97789,353.96683,436.87838Q290.95577,483.77887,223.95577,447.43366Q156.95577,411.08845,105.64373,365.97789Q54.33169,320.86732,62.67444,252.61056Q71.01719,184.3538,113.01965,135.21007Q155.02211,86.06634,220.52211,66.46683Q286.02211,46.86732,335.5,91.94472Q384.97789,137.02211,437.78747,193.51106Q490.59704,250,453.78747,319.98894Z;M411.39826,313.90633Q402.59677,377.81265,342.92059,407.63957Q283.24442,437.46649,215.13648,432.5428Q147.02853,427.61911,82.23325,380.9572Q17.43796,334.29529,20.45223,250.83809Q23.46649,167.38089,82.5856,115.05707Q141.70471,62.73325,212.19045,63.73015Q282.67618,64.72705,352.67308,84.79839Q422.66998,104.86972,421.43486,177.43486Q420.19974,250,411.39826,313.90633Z;M440.5,320.5Q418,391,355.5,442.5Q293,494,226,450.5Q159,407,99,367Q39,327,31.5,247.5Q24,168,89,125.5Q154,83,219.5,68Q285,53,335.5,94.5Q386,136,424.5,193Q463,250,440.5,320.5Z;"
+                        ></animate>
+                    </path>
+                </svg>
+            </div>
+            <div class="album py-5 bg-body-tertiary">
+                <div class="container">
+                    <h1>We Gave You the Options, Here's all your results!</h1>
+                    <p class="lead">
+                        Stay up-to-date with your personalized movie
+                        recommendations!
+                    </p>
+                    <p>
+                        Our Watchlist History page allows you to keep track of
+                        all the movies you've added to your watchlist, making it
+                        easy to plan your movie nights and never miss out on a
+                        great film again.
+                    </p>
+
+                    <h2 class="mt-4">Take another look</h2>
+                    <p>
+                        Whether you're creating a list for a cozy movie night at
+                        home or building your must-watch collection, our
+                        Watchlist History page ensures that you never forget the
+                        movies that piqued your interest and guarantees an
+                        enjoyable movie-watching experience.
+                    </p>
+
+                    <div class="favoriteMoviesList"></div>
+                </div>
+            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="text-body-secondary py-5">
+            <div class="container">
+                <p class="float-end mb-1">
+                    <a href="#">Back to top</a>
+                </p>
+                <p class="mb-1">&copy; 2023</p>
+                <p class="mb-0">
+                    New to Bootstrap? <a href="/">Visit the homepage</a> or read
+                    our
+                    <a href="../getting-started/introduction/"
+                        >getting started guide</a
+                    >.
+                </p>
+            </div>
+        </footer>
+
+        <script src="favorites.js"></script>
+    </body>
 </html>
