--- a/results.html
+++ b/results.html
@@ -50,7 +50,7 @@
                 <ul class="nav nav-pills">
                     <li class="nav-item">
                         <a
-                            href="homepage.html"
+                            href="index.html"
                             class="nav-link"
                             aria-current="page"
                             >Home</a
