header html and css update

--- a/favorites.html
+++ b/favorites.html
@@ -23,7 +23,7 @@
         <!-- Header -->
         <div class="container">
             <header
-                class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
+                class="d-flex flex-wrap justify-content-between py-3 mb-4 border-bottom"
             >
                 <a
                     href="/"
@@ -32,7 +32,7 @@
                     <svg class="bi me-2" width="40" height="32">
                         <use xlink:href="#bootstrap" />
                     </svg>
-                    <span class="fs-4">MOVFI</span>
+                    <span class="fs-4">MOVIE TIME</span>
                 </a>
 
                 <ul class="nav nav-pills">
@@ -93,25 +93,20 @@
             </div>
             <div class="album py-5 bg-body-tertiary">
                 <div class="container">
-                    <h1>We Gave You the Options, Here's all your results!</h1>
+                    <h1>Take A Look At Your Favorite Movies!</h1>
                     <p class="lead">
-                        Stay up-to-date with your personalized movie
-                        recommendations!
+                        Remember, you added these to the list, and you can also remove them with one click.
                     </p>
-                    <p>
-                        Our Watchlist History page allows you to keep track of
-                        all the movies you've added to your watchlist, making it
-                        easy to plan your movie nights and never miss out on a
-                        great film again.
-                    </p>
+            
 
-                    <h2 class="mt-4">Take another look</h2>
+                    <h2 class="mt-4">Here is Your List:</h2>
                     <p>
                         Whether you're creating a list for a cozy movie night at
-                        home or building your must-watch collection, our
-                        Watchlist History page ensures that you never forget the
+                        home or building your must-watch collection, this
+                        page ensures that you never forget the
                         movies that piqued your interest and guarantees an
-                        enjoyable movie-watching experience.
+                        enjoyable movie-watching experience. 
+                        You can also access details of each movie whenever you'd like, just in case you don't remember.
                     </p>
 
                     <div class="favoriteMoviesList"></div>
