--- a/results.html
+++ b/results.html
@@ -35,7 +35,7 @@
     <body>
         <div class="container">
             <header
-                class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom"
+                class="d-flex flex-wrap justify-content-between py-3 mb-4 border-bottom"
             >
                 <a
                     href="/"
@@ -44,7 +44,7 @@
                     <svg class="bi me-2" width="40" height="32">
                         <use xlink:href="#bootstrap" />
                     </svg>
-                    <span class="fs-4">MOVFI</span>
+                    <span class="fs-4">MOVIE TIME</span>
                 </a>
 
                 <ul class="nav nav-pills">
