update Favorite page html from Results

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="" />
-        <title>Movie Recommendation and Voting App</title>
+        <title>Movie Recommendation App</title>
         <link rel="stylesheet" type="text/css" href="./style.css" />
 
         <link
