--- a/results.html
+++ b/results.html
@@ -58,7 +58,7 @@
                     </li>
 
                     <li class="nav-item">
-                        <a href="history.html" class="nav-link">History</a>
+                        <a href="favorites.html" class="nav-link">Favorites</a>
                     </li>
                 </ul>
             </header>
