--- a/favorites.html
+++ b/favorites.html
@@ -32,21 +32,21 @@
                     <svg class="bi me-2" width="40" height="32">
                         <use xlink:href="#bootstrap" />
                     </svg>
-                    <span class="fs-4">MOVIE TIME</span>
+                    <span class="fs-3">MOVIE TIME</span>
                 </a>
 
                 <ul class="nav nav-pills">
                     <li class="nav-item">
                         <a
                             href="index.html"
-                            class="nav-link"
+                            class="nav-link fs-4"
                             aria-current="page"
                             >Home</a
                         >
                     </li>
 
                     <li class="nav-item">
-                        <a href="favorites.html" class="nav-link active"
+                        <a href="favorites.html" class="nav-link active fs-4"
                             >Favorites</a
                         >
                     </li>
@@ -60,7 +60,7 @@
                     version="1.1"
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 500 500"
-                    width="50%"
+                    width="100%"
                     id="blobSvg"
                 >
                     <defs>
@@ -73,11 +73,11 @@
                         >
                             <stop
                                 offset="0%"
-                                style="stop-color: rgb(147, 11, 11)"
+                                style="stop-color: rgb(253, 97, 97)"
                             ></stop>
                             <stop
                                 offset="100%"
-                                style="stop-color: rgb(203, 87, 87)"
+                                style="stop-color: rgb(101, 249, 158)"
                             ></stop>
                         </lineargradient>
                     </defs>
