--- a/results.html
+++ b/results.html
@@ -44,21 +44,21 @@
                     <svg class="bi me-2" width="40" height="32">
                         <use xlink:href="#bootstrap" />
                     </svg>
-                    <span class="fs-4">MOVIE TIME</span>
+                    <span class="fs-3">MOVIE TIME</span>
                 </a>
 
                 <ul class="nav nav-pills">
                     <li class="nav-item">
                         <a
                             href="index.html"
-                            class="nav-link"
+                            class="nav-link fs-4"
                             aria-current="page"
                             >Home</a
                         >
                     </li>
 
                     <li class="nav-item">
-                        <a href="favorites.html" class="nav-link">Favorites</a>
+                        <a href="favorites.html" class="nav-link fs-4">Favorites</a>
                     </li>
                 </ul>
             </header>
@@ -83,7 +83,7 @@
                         >
                             <stop
                                 offset="0%"
-                                style="stop-color: rgb(147, 11, 11)"
+                                style="stop-color: rgb(83, 117, 254)"
                             ></stop>
                             <stop
                                 offset="100%"
