Added fonts and fixed movie details so that it matches movie title

--- a/favorites.html
+++ b/favorites.html
@@ -93,20 +93,22 @@
             </div>
             <div class="album py-5 bg-body-tertiary">
                 <div class="container">
-                    <h1>Take A Look At Your Favorite Movies!</h1>
+                    <h1 class="fs-1 fw-bold">
+                        Take A Look At Your Favorite Movies!
+                    </h1>
                     <p class="lead">
-                        Remember, you added these to the list, and you can also remove them with one click.
+                        Remember, you added these to the list, and you can also
+                        remove them with one click.
                     </p>
-            
 
                     <h2 class="mt-4">Here is Your List:</h2>
-                    <p>
+                    <p class="lead">
                         Whether you're creating a list for a cozy movie night at
-                        home or building your must-watch collection, this
-                        page ensures that you never forget the
-                        movies that piqued your interest and guarantees an
-                        enjoyable movie-watching experience. 
-                        You can also access details of each movie whenever you'd like, just in case you don't remember.
+                        home or building your must-watch collection, this page
+                        ensures that you never forget the movies that piqued
+                        your interest and guarantees an enjoyable movie-watching
+                        experience. You can also access details of each movie
+                        whenever you'd like, just in case you don't remember.
                     </p>
 
                     <div class="favoriteMoviesList"></div>
