Removed blob css

--- a/favorites.html
+++ b/favorites.html
@@ -61,7 +61,6 @@
         </div>
         <!-- Blob and Hero -->
         <main>
-            <div class="blob-crt"></div>
             <div class="album py-5 bg-body-tertiary">
                 <div class="container">
                     <h1 class="fs-1 fw-bold">
@@ -93,13 +92,10 @@
                 <p class="float-end mb-1">
                     <a href="#">Back to top</a>
                 </p>
-                <p class="mb-1">&copy; 2023</p>
+                <p class="mb-1">&copy; 2023 MOVIE TIME</p>
                 <p class="mb-0">
-                    New to Bootstrap? <a href="/">Visit the homepage</a> or read
-                    our
-                    <a href="../getting-started/introduction/"
-                        >getting started guide</a
-                    >.
+                    Discover more movie recommendations and start your movie
+                    night now. our
                 </p>
             </div>
         </footer>
