--- a/results.html
+++ b/results.html
@@ -73,8 +73,6 @@
         </div>
 
         <main class="container">
-            <div class="blob-crt"></div>
-
             <div class="row mb-2">
                 <div class="col-md-6">
                     <div
@@ -133,13 +131,10 @@
                 <p class="float-end mb-1">
                     <a href="#">Back to top</a>
                 </p>
-                <p class="mb-1">&copy; 2023</p>
+                <p class="mb-1">&copy; 2023 MOVIE TIME</p>
                 <p class="mb-0">
-                    New to Bootstrap? <a href="/">Visit the homepage</a> or read
-                    our
-                    <a href="../getting-started/introduction/"
-                        >getting started guide</a
-                    >.
+                    Discover more movie recommendations and start your movie
+                    night now. our
                 </p>
             </div>
         </footer>
