--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
 
         <!-- Blob and Hero -->
         <main>
-            <div class="blob-crt"></div>
             <section class="album py-5">
                 <div class="row py-lg-5">
                     <div class="col-lg-6 col-md-8 mx-auto">
@@ -121,13 +120,10 @@
                 <p class="float-end mb-1">
                     <a href="#">Back to top</a>
                 </p>
-                <p class="mb-1">&copy; 2023</p>
+                <p class="mb-1">&copy; 2023 MOVIE TIME</p>
                 <p class="mb-0">
-                    New to Bootstrap? <a href="/">Visit the homepage</a> or read
-                    our
-                    <a href="../getting-started/introduction/"
-                        >getting started guide</a
-                    >.
+                    Discover more movie recommendations and start your movie
+                    night now. our
                 </p>
             </div>
         </footer>
