Changed color of grids

--- a/favorites.html
+++ b/favorites.html
@@ -61,7 +61,7 @@
         </div>
         <!-- Blob and Hero -->
         <main>
-            <div class="album py-5 bg-body-tertiary">
+            <div class="py-5 bg-body-tertiary">
                 <div class="container">
                     <h1 class="fs-1 fw-bold">
                         Take A Look At Your Favorite Movies!
