--- a/results.html
+++ b/results.html
@@ -114,11 +114,10 @@
                 <div class="col-md-4">
                     <div class="position-sticky" style="top: 2rem">
                         <div class="p-4">
-                            <h4 class="fst-italic">Elsewhere</h4>
+                            <h4 class="fst-italic">See More</h4>
                             <ol class="list-unstyled">
-                                <li><a href="#">GitHub</a></li>
-                                <li><a href="#">Twitter</a></li>
-                                <li><a href="#">Facebook</a></li>
+                                <li><a href="index.html">Home</a></li>
+                                <li><a href="favorites.html">Favorites</a></li>
                             </ol>
                         </div>
                     </div>
