Centered text and images. Changed side-nav

--- a/results.html
+++ b/results.html
@@ -73,13 +73,17 @@
         </div>
 
         <main class="container">
-            <div class="row mb-2">
+            <div class="row mb-2 justify-content-center">
                 <div class="col-md-6">
                     <div
-                        class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative"
+                        class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative image-container"
+                        style="width: 250px; height: 300px"
                     >
-                        <div class="col-auto d-none d-lg-block">
-                            <img id="moviePoster" width="200" height="250" />
+                        <div
+                            class="col-md-6 h-100"
+                            style="width: 250px; height: 300px"
+                        >
+                            <img id="moviePoster" width="250" height="300" />
                         </div>
                     </div>
                 </div>
